# sudoku-solver

./: README.md
c/: .clang-format  CMakeLists.txt  shell.nix  sudoku.txt
c/.cache/clangd/index/: actions.h.1577C5E930CA3191.idx  cell.h.63265429489095E4.idx  colors.h.936193ECA02EC9A6.idx  colors.h.AF5A55BB15B9DCEC.idx  main.c.2D18D65BC8FB68F9.idx  prepare_sudokus.c.5AC95A87D777E715.idx  prepare_sudokus.h.B611790ADD5736DE.idx  print_cell.c.7C8E0D3CCEC0D800.idx  print_cell.h.551A7032704CC19D.idx  print_sudoku.c.58D4D2D62152DAFF.idx  print_sudoku.h.E11DF7CA80BF1575.idx  quad_col.c.53B579CA985D79B6.idx  quad_col.h.C1CF544321983DA8.idx  quad_position.c.034E4A5001F5BF22.idx  quad_position.h.A4B6C0E82B84F6D3.idx  quad_row.c.C0607A2D18036BC4.idx  solve_cell.c.A1403C232F6EFCBE.idx  solve_cell.h.29A224A9A4AC9491.idx  solve_sudoku.c.5B1B2671FFF90D67.idx  solve_sudoku.h.83D2C97C17D8AD0E.idx  sudoku.h.D35C1C71B44A18F0.idx  u8.h.9555D108EAB1AC72.idx  u_t.h.A25183AE12F94405.idx  walk.c.DA007A7966050DAB.idx  walk.h.CC0113D6CF3EB98F.idx
c/include/: cell.h  prepare_sudokus.h  print_cell.h  print_sudoku.h  quad_position.h  solve_cell.h  solve_sudoku.h  sudoku.h  u_t.h  walk.h
c/include/term/: actions.h  colors.h
c/src/: main.c
c/src/helpers/: prepare_sudokus.c  print_cell.c  print_sudoku.c  quad_position.c  solve_cell.c  solve_sudoku.c  walk.c
